--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@nestjs/jwt": "^10.2.0",
 		"@nestjs/mapped-types": "*",
 		"@nestjs/microservices": "^10.4.1",
+		"@nestjs/mongoose": "^10.0.10",
 		"@nestjs/passport": "^10.0.3",
 		"@nestjs/platform-express": "^10.0.0",
 		"@nestjs/swagger": "^7.3.0",
@@ -33,11 +34,14 @@
 		"bcrypt": "^5.1.1",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.1",
+		"dotenv": "^16.4.5",
 		"kafkajs": "^2.2.4",
+		"mongoose": "^8.6.2",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
 		"reflect-metadata": "^0.2.0",
-		"rxjs": "^7.8.1"
+		"rxjs": "^7.8.1",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@nestjs/cli": "^10.0.0",
@@ -56,7 +60,6 @@
 		"eslint-plugin-prettier": "^5.0.0",
 		"jest": "^29.5.0",
 		"prettier": "^3.0.0",
-		"prisma": "^5.11.0",
 		"source-map-support": "^0.5.21",
 		"supertest": "^6.3.3",
 		"ts-jest": "^29.1.0",
