--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"passport-jwt": "^4.0.1",
 		"reflect-metadata": "^0.2.0",
 		"rxjs": "^7.8.1",
+		"stripe": "^18.3.0",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
