--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"reflect-metadata": "^0.2.0",
 		"rxjs": "^7.8.1",
 		"stripe": "^18.3.0",
+		"wrangler": "^4.42.0",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
