--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,5 +9,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Run unit Tests
-        run: npm run test
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+
+      - name: Login to ECR
+        run: aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 236604670219.dkr.ecr.us-east-2.amazonaws.com
+
+      - name: Build Docker image
+        run: docker build -t trakker-app .
+
+      - name: Tag Docker image
+        run: docker tag trakker-app:latest 236604670219.dkr.ecr.us-east-2.amazonaws.com/trakker-app:latest
+
+      - name: Push to ECR
+        run: docker push 236604670219.dkr.ecr.us-east-2.amazonaws.com/trakker-app:latest
