chore: create action for deploy and test

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,4 +4,15 @@
 	"assets": {
 		"directory": "./dist",
 	},
+	"build": {
+		"command": "npm run build",
+		"cwd": "./",
+		"watch_dir": "./src",
+	},
+	"routes": [
+		{
+			"pattern": "/*",
+			"script": "worker-trakker-server",
+		},
+	],
 }
