--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 services:
   api:
     build: .
-    container_name: server
+    container_name: trakker-server
     restart: always
     ports:
       - "3000:3000"
@@ -22,17 +22,6 @@ services:
       - mongodb_data:/data/db
     ports:
       - "27017:27017"
-
-  mongo-express:
-    image: mongo-express
-    restart: always
-    ports:
-      - "8081:8081"
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-      ME_CONFIG_MONGODB_URL: ${ME_CONFIG_MONGODB_URL_DOCKER}
-      ME_CONFIG_BASICAUTH: false
 
 volumes:
   mongodb_data:
