--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
 			"src/*": ["./src/*"] // Certifique-se de que está assim
 		}
 	},
-	"exclude": ["infra", "node_modules", "dist", "test"]
+	"exclude": ["infra", "node_modules", "dist"]
 }
