--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"ts-jest": "^29.1.0",
 		"ts-loader": "^9.4.3",
 		"ts-node": "^10.9.1",
+		"tsc-alias": "^1.8.16",
 		"tsx": "^4.19.1",
 		"typescript": "^5.1.3",
 		"webpack": "^5.102.0"
