--- a/package.json
+++ b/package.json
@@ -22,59 +22,59 @@
 	},
 	"dependencies": {
 		"@nestjs/axios": "^4.0.1",
-		"@nestjs/common": "^10.0.0",
-		"@nestjs/core": "^10.0.0",
+		"@nestjs/common": "^10.4.22",
+		"@nestjs/core": "^10.4.22",
 		"@nestjs/jwt": "^10.2.0",
-		"@nestjs/mapped-types": "*",
-		"@nestjs/microservices": "^10.4.1",
-		"@nestjs/mongoose": "^10.0.10",
+		"@nestjs/mapped-types": "^2.1.0",
+		"@nestjs/microservices": "^10.4.22",
+		"@nestjs/mongoose": "^10.1.0",
 		"@nestjs/passport": "^10.0.3",
-		"@nestjs/platform-express": "^10.0.0",
+		"@nestjs/platform-express": "^10.4.22",
 		"@nestjs/schedule": "^5.0.1",
-		"@nestjs/swagger": "^7.3.0",
-		"axios": "^1.10.0",
+		"@nestjs/swagger": "^7.4.2",
+		"axios": "^1.13.5",
 		"bcrypt": "^5.1.1",
 		"class-transformer": "^0.5.1",
-		"class-validator": "^0.14.1",
-		"dotenv": "^16.4.5",
+		"class-validator": "^0.14.3",
+		"dotenv": "^16.6.1",
 		"kafkajs": "^2.2.4",
-		"mongoose": "^8.6.2",
+		"mongoose": "^8.23.0",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
-		"puppeteer": "^24.25.0",
-		"reflect-metadata": "^0.2.0",
-		"rxjs": "^7.8.1",
-		"stripe": "^18.3.0",
+		"puppeteer": "^24.37.3",
+		"reflect-metadata": "^0.2.2",
+		"rxjs": "^7.8.2",
+		"stripe": "^18.5.0",
 		"tsconfig-paths": "^4.2.0",
-		"wrangler": "^4.42.0",
-		"zod": "^3.23.8"
+		"wrangler": "^4.66.0",
+		"zod": "^3.25.76"
 	},
 	"devDependencies": {
-		"@nestjs/cli": "^10.0.0",
-		"@nestjs/schematics": "^10.0.0",
-		"@nestjs/testing": "^10.0.0",
+		"@nestjs/cli": "^10.4.9",
+		"@nestjs/schematics": "^10.2.3",
+		"@nestjs/testing": "^10.4.22",
 		"@types/bcrypt": "^5.0.2",
-		"@types/express": "^4.17.17",
-		"@types/jest": "^29.5.2",
-		"@types/node": "^20.3.1",
+		"@types/express": "^4.17.25",
+		"@types/jest": "^29.5.14",
+		"@types/node": "^20.19.33",
 		"@types/passport-jwt": "^4.0.1",
-		"@types/supertest": "^6.0.0",
-		"@typescript-eslint/eslint-plugin": "^6.0.0",
-		"@typescript-eslint/parser": "^6.0.0",
-		"eslint": "^8.42.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-prettier": "^5.0.0",
-		"jest": "^29.5.0",
-		"prettier": "^3.0.0",
+		"@types/supertest": "^6.0.3",
+		"@typescript-eslint/eslint-plugin": "^6.21.0",
+		"@typescript-eslint/parser": "^6.21.0",
+		"eslint": "^8.57.1",
+		"eslint-config-prettier": "^9.1.2",
+		"eslint-plugin-prettier": "^5.5.5",
+		"jest": "^29.7.0",
+		"prettier": "^3.8.1",
 		"source-map-support": "^0.5.21",
-		"supertest": "^7.1.3",
-		"ts-jest": "^29.1.0",
-		"ts-loader": "^9.4.3",
-		"ts-node": "^10.9.1",
+		"supertest": "^7.2.2",
+		"ts-jest": "^29.4.6",
+		"ts-loader": "^9.5.4",
+		"ts-node": "^10.9.2",
 		"tsc-alias": "^1.8.16",
-		"tsx": "^4.19.1",
-		"typescript": "^5.1.3",
-		"webpack": "^5.102.0"
+		"tsx": "^4.21.0",
+		"typescript": "^5.9.3",
+		"webpack": "^5.105.2"
 	},
 	"peerDependencies": {
 		"webpack": "^5.102.0"
